# trust_evaluation_testbed

./: CMakeLists.txt  LICENSE  README.md  comfort_service.py  package.xml
maps/: house_map.yaml
scripts/: safety_service.py  trust_service.py
src/: README.md  setup.py
src copy/: setup.cfg
src copy/maps/: house_map.pgm  house_map.yaml
src copy/plugins/: actor_plugin.cpp
src copy/scripts/: goal_monitor.py  reliability_service.py
src/plugins/: plugin.xml
src/trust_sim/trust_sim/misc/srv/: SetGoals.srv
src/trust_sim/trust_sim/misc/srv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/trust_sim/trust_sim/misc/xtraCode/: NEWgoal_setting_service.py  OLDgoal_monitor.py  OLDreliability_service.py  navigation_monitor.py  publish_positions.py  publish_positions_old.py  reliability_metric.py  subscribe_positions.py  world.world
src/trust_sim/trust_sim/old scripts/: comfort_service.py  goal_monitor.py  goal_setting_service.py  reliability_service (copy).py  reliability_service.py  test.py
